# specsync

./: .coverage  .gitignore  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  justfile  pyproject.toml  readthedocs.yaml
docs/: api.md  architecture.md  changelog.md  conf.py  configuration.md  index.md  installation.md  requirements.txt  usage.md
examples/: draft-example.md  spec-example.md  specsync.yaml
specsync/: __init__.py  cli.py  config.py  sync.py
tests/: __init__.py  test_cli.py  test_config.py  test_frontmatter.py  test_fs.py  test_integration.py  test_prompt.py  test_selector.py
